Cross compile for MIPS and set cmakelists ready for nested vm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,12 +32,13 @@ ENDIF()
 #the following variables are project-wide and can be used with cmake-gui
 option(skip_unittests "set skip_unittests to ON to skip unittests (default is OFF)[if possible, they are always built]" OFF)
 option(skip_samples "set skip_samples to ON to skip building samples (default is OFF)[if possible, they are always built]" OFF)
-option(use_http "set use_http to ON if http is to be used, set to OFF to not use http" ON)
+option(use_http "set use_http to ON if http is to be used, set to OFF to not use http" OFF)
 option(use_condition "set use_condition to ON if the condition module and its adapters should be enabled" ON)
 option(use_wsio "set use_wsio to ON to use libwebsockets for WebSocket support (default is OFF)" OFF)
 option(nuget_e2e_tests "set nuget_e2e_tests to ON to generate e2e tests to run with nuget packages (default is OFF)" OFF)
 option(use_installed_dependencies "set use_installed_dependencies to ON to use installed packages instead of building dependencies from submodules" OFF)
-option(use_default_uuid "set use_default_uuid to ON to use the out of the box UUID that comes with the SDK rather than platform specific implementations" OFF)
+option(use_default_uuid "set use_default_uuid to ON to use the out of the box UUID that comes with the SDK rather than platform specific implementations" ON)
+option(nestedvm "set nestedvm to ON to generate compile for nestedvm" ON)
 
 if(WIN32)
     option(use_schannel "set use_schannel to ON if schannel is to be used, set to OFF to not use schannel" ON)
@@ -45,7 +46,7 @@ if(WIN32)
     option(use_wolfssl "set use_wolfssl to ON if wolfssl is to be used, set to OFF to not use wolfssl" OFF)
 else()
     option(use_schannel "set use_schannel to ON if schannel is to be used, set to OFF to not use schannel" OFF)
-    option(use_openssl "set use_openssl to ON if openssl is to be used, set to OFF to not use openssl" ON)
+    option(use_openssl "set use_openssl to ON if openssl is to be used, set to OFF to not use openssl" OFF)
     option(use_wolfssl "set use_wolfssl to ON if wolfssl is to be used, set to OFF to not use wolfssl" OFF)
 endif()
 option(use_socketio "set use_socketio to ON if socketio is to be included in the library, set to OFF if a different implementation will be provided" ON)
@@ -147,8 +148,13 @@ if(MSVC)
 
     endif()
 elseif(LINUX)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -Werror")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC -Werror")
+	if(${nestedvm})
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror")
+		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror")
+	else()
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -Werror")
+		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC -Werror")
+	endif()
     if(NOT IN_OPENWRT)
         set (CMAKE_C_FLAGS "-D_POSIX_C_SOURCE=200112L ${CMAKE_C_FLAGS}")
     endif()
@@ -495,7 +501,9 @@ if(${use_openssl})
             $ENV{OpenSSLDir}/lib/libeay32.lib
             crypt32 ws2_32 secur32)
     else()
-        target_link_libraries(aziotsharedutil ssl crypto)
+		if(NOT ${nestedvm})
+			target_link_libraries(aziotsharedutil ssl crypto)
+		endif()
     endif()
 endif()
 
@@ -513,8 +521,14 @@ if(WIN32)
 	endif()
 endif()
 
+
 if(LINUX)
-    target_link_libraries(aziotsharedutil pthread m)
+	if(${nestedvm})
+		target_link_libraries(aziotsharedutil m)
+	else()
+		target_link_libraries(aziotsharedutil pthread m)
+	endif ()
+
 	if (NOT ${use_default_uuid})
 		target_link_libraries(aziotsharedutil uuid)
 	endif()
@@ -528,6 +542,10 @@ endif()
 
 if (NOT ${skip_samples})
     add_subdirectory(samples)
+endif()
+
+if(${nestedvm})
+	add_subdirectory(java)
 endif()
 
 if(${use_installed_dependencies})
